@@ -79,7 +79,7 @@
   </query>
 
   <circuitBreaker class="solr.MemoryCircuitBreaker">
-    <double  name="threshold">99</double>
+    <double  name="threshold">75</double>
     <arr name="requestTypes">
       <str>update</str>
     </arr>
